Fix scrolling the RepeatingList on mobile devices

--- a/client/components/RepeatingList/RepeatingList.css
+++ b/client/components/RepeatingList/RepeatingList.css
@@ -3,7 +3,7 @@ repeating-list {
     display: flex;
     overflow: hidden;
 }
-repeating-list:hover {
+repeating-list:hover, repeating-list:active {
     overflow: scroll;
 }
 @media (prefers-reduced-motion: reduce) {
